--- a/package.json
+++ b/package.json
@@ -19,17 +19,22 @@
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "@ngtools/webpack": "^1.2.4",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
     "jshint": "^2.10.2",
+    "lightbox2": "^2.11.1",
+    "ngx-lightbox": "^2.0.0",
+    "nodemon": "^1.19.1",
     "popper.js": "^1.15.0",
     "rxjs": "~6.4.0",
+    "screenfull": "^3.3.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.802.2",
-    "@angular/cli": "^8.2.2",
+    "@angular/cli": "^8.3.0",
     "@angular/compiler-cli": "~8.2.0",
     "@angular/language-service": "~8.2.0",
     "@types/jasmine": "~3.3.8",
