--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,8 @@
                             "node_modules/jquery/dist/jquery.min.js",
                             "node_modules/popper.js/dist/umd/popper.min.js",
                             "node_modules/bootstrap/dist/js/bootstrap.min.js",
-                            "node_modules/screenfull/dist/screenfull.js"
+                            "node_modules/screenfull/dist/screenfull.js",
+                            "node_modules/ez-plus/src/jquery.ez-plus.js"
 
                         ]
                     },
