--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.2.0",
     "@ngtools/webpack": "^1.2.4",
     "bootstrap": "^4.3.1",
+    "ez-plus": "^1.2.1",
     "jquery": "^3.4.1",
     "jshint": "^2.10.2",
     "lightbox2": "^2.11.1",
