--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,10 @@
               "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/screenfull/dist/screenfull.js"
+              "node_modules/angular-timeline/dist/angular-timeline-bootstrap.css",
+              "node_modules/angular-timeline/dist/angular-timeline.css",
+              "node_modules/angular-timeline/dist/angular-timeline-animations.css"
+
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.slim.min.js",
