--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@angular/core": "~8.2.0",
     "@angular/forms": "~8.2.0",
     "@angular/material": "^8.1.4",
+    "@angular/material-moment-adapter": "^8.1.4",
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
     "@nebular/eva-icons": "4.2.1",
     "@nebular/theme": "^4.2.1",
     "@ngtools/webpack": "^1.2.4",
+    "angular-timeline": "^1.7.0",
+    "angular-vertical-timeline": "^0.6.0",
     "bootstrap": "^4.3.1",
     "eva-icons": "^1.1.1",
     "ez-plus": "^1.2.1",
@@ -31,6 +34,7 @@
     "jquery": "^3.4.1",
     "jshint": "^2.10.2",
     "lightbox2": "^2.11.1",
+    "moment": "^2.24.0",
     "ngx-lightbox": "^2.0.0",
     "nodemon": "^1.19.1",
     "popper.js": "^1.15.0",
