--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.0",
-    "@angular/cdk": "^8.0.0",
+    "@angular/cdk": "^8.1.4",
     "@angular/common": "~8.2.0",
     "@angular/compiler": "~8.2.0",
     "@angular/core": "~8.2.0",
+    "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "~8.2.0",
     "@angular/material": "^8.1.4",
     "@angular/material-moment-adapter": "^8.1.4",
@@ -25,6 +26,7 @@
     "@nebular/eva-icons": "4.2.1",
     "@nebular/theme": "^4.2.1",
     "@ngtools/webpack": "^1.2.4",
+    "angular-chart.js": "^1.1.1",
     "angular-timeline": "^1.7.0",
     "angular-vertical-timeline": "^0.6.0",
     "bootstrap": "^4.3.1",
