--- a/package.json
+++ b/package.json
@@ -1,71 +1,76 @@
 {
-  "name": "grabame",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~8.2.0",
-    "@angular/cdk": "^8.1.4",
-    "@angular/common": "~8.2.0",
-    "@angular/compiler": "~8.2.0",
-    "@angular/core": "~8.2.0",
-    "@angular/flex-layout": "^8.0.0-beta.27",
-    "@angular/forms": "~8.2.0",
-    "@angular/material": "^8.1.4",
-    "@angular/material-moment-adapter": "^8.1.4",
-    "@angular/platform-browser": "~8.2.0",
-    "@angular/platform-browser-dynamic": "~8.2.0",
-    "@angular/router": "~8.2.0",
-    "@nebular/eva-icons": "4.2.1",
-    "@nebular/theme": "^4.2.1",
-    "@ngtools/webpack": "^1.2.4",
-    "angular-chart.js": "^1.1.1",
-    "angular-timeline": "^1.7.0",
-    "angular-vertical-timeline": "^0.6.0",
-    "bootstrap": "^4.3.1",
-    "eva-icons": "^1.1.1",
-    "ez-plus": "^1.2.1",
-    "hammerjs": "^2.0.8",
-    "jquery": "^3.4.1",
-    "jshint": "^2.10.2",
-    "lightbox2": "^2.11.1",
-    "moment": "^2.24.0",
-    "ngx-lightbox": "^2.0.0",
-    "nodemon": "^1.19.1",
-    "popper.js": "^1.15.0",
-    "rxjs": "~6.4.0",
-    "screenfull": "^3.3.0",
-    "scss": "^0.2.4",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.802.2",
-    "@angular/cli": "^8.3.3",
-    "@angular/compiler-cli": "~8.2.0",
-    "@angular/language-service": "~8.2.0",
-    "@schematics/angular": "^8.3.0",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
-  }
+    "name": "grabame",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "~8.2.0",
+        "@angular/cdk": "^8.1.4",
+        "@angular/common": "~8.2.0",
+        "@angular/compiler": "~8.2.0",
+        "@angular/core": "~8.2.0",
+        "@angular/flex-layout": "^8.0.0-beta.27",
+        "@angular/forms": "~8.2.0",
+        "@angular/material": "^8.1.4",
+        "@angular/material-moment-adapter": "^8.1.4",
+        "@angular/platform-browser": "~8.2.0",
+        "@angular/platform-browser-dynamic": "~8.2.0",
+        "@angular/router": "~8.2.0",
+        "@nebular/eva-icons": "4.2.1",
+        "@nebular/theme": "^4.2.1",
+        "@ngtools/webpack": "^1.2.4",
+        "angular-chart.js": "^1.1.1",
+        "angular-timeline": "^1.7.0",
+        "angular-vertical-timeline": "^0.6.0",
+        "bootstrap": "^4.3.1",
+        "eva-icons": "^1.1.1",
+        "ez-plus": "^1.2.1",
+        "hammerjs": "^2.0.8",
+        "jquery": "^3.4.1",
+        "jshint": "^2.10.2",
+        "lightbox2": "^2.11.1",
+        "moment": "^2.24.0",
+        "ngx-lightbox": "^2.0.0",
+        "nodemon": "^1.19.1",
+        "popper.js": "^1.15.0",
+        "rxjs": "~6.4.0",
+        "screenfull": "^3.3.0",
+        "scss": "^0.2.4",
+        "tslib": "^1.10.0",
+        "zone.js": "~0.9.1"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~0.802.2",
+        "@angular/cli": "^8.3.3",
+        "@angular/compiler-cli": "~8.2.0",
+        "@angular/language-service": "~8.2.0",
+        "@schematics/angular": "^8.3.0",
+        "@types/jasmine": "~3.3.8",
+        "@types/jasminewd2": "~2.0.3",
+        "@types/node": "~8.9.4",
+        "codelyzer": "^5.0.0",
+        "jasmine-core": "~3.4.0",
+        "jasmine-spec-reporter": "~4.2.1",
+        "karma": "~4.1.0",
+        "karma-chrome-launcher": "~2.2.0",
+        "karma-coverage-istanbul-reporter": "~2.0.1",
+        "karma-jasmine": "~2.0.1",
+        "karma-jasmine-html-reporter": "^1.4.0",
+        "protractor": "~5.4.0",
+        "ts-node": "~7.0.0",
+        "tslint": "~5.15.0",
+        "typescript": "~3.5.3"
+    },
+
+    "engines": {
+        "node": "10.16.3",
+        "npm": "6.9.0"
+    }
 }
