--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.0",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve",
+        "start": "node server.js",
         "build": "ng build",
         "test": "ng test",
         "lint": "ng lint",
@@ -13,6 +13,8 @@
     },
     "private": true,
     "dependencies": {
+        "@angular/cli": "^8.3.3",
+        "@angular/compiler-cli": "~8.2.0",
         "@angular/animations": "~8.2.0",
         "@angular/cdk": "^8.1.4",
         "@angular/common": "~8.2.0",
@@ -50,8 +52,6 @@
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "~0.802.2",
-        "@angular/cli": "^8.3.3",
-        "@angular/compiler-cli": "~8.2.0",
         "@angular/language-service": "~8.2.0",
         "@schematics/angular": "^8.3.0",
         "@types/jasmine": "~3.3.8",
