--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
         "lint": "ng lint",
         "e2e": "ng e2e",
         "postinstall": "ng build --prod --aot"
-
     },
     "private": true,
     "dependencies": {
@@ -51,7 +50,7 @@
         "zone.js": "~0.9.1"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "~0.802.2",
+        "@angular-devkit/build-angular": "^0.802.2",
         "@angular/language-service": "~8.2.0",
         "@schematics/angular": "^8.3.0",
         "@types/jasmine": "~3.3.8",
