--- a/package.json
+++ b/package.json
@@ -3,22 +3,18 @@
     "version": "0.0.0",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve",
         "build": "ng build",
+        "start": "ng serve",
         "test": "ng test",
         "lint": "ng lint",
-        "e2e": "ng e2e",
-        "postinstall": "ng build --prod --aot"
+        "e2e": "ng e2e"
     },
     "private": true,
     "dependencies": {
-        "@angular-devkit/build-angular": "^0.13.0",
         "@angular/animations": "~8.2.0",
         "@angular/cdk": "^8.1.4",
-        "@angular/cli": "^8.3.3",
         "@angular/common": "~8.2.0",
         "@angular/compiler": "~8.2.0",
-        "@angular/compiler-cli": "~8.2.0",
         "@angular/core": "~8.2.0",
         "@angular/flex-layout": "^8.0.0-beta.27",
         "@angular/forms": "~8.2.0",
@@ -51,6 +47,9 @@
         "zone.js": "~0.9.1"
     },
     "devDependencies": {
+        "@angular-devkit/build-angular": "~0.802.2",
+        "@angular/cli": "^8.3.3",
+        "@angular/compiler-cli": "~8.2.0",
         "@angular/language-service": "~8.2.0",
         "@schematics/angular": "^8.3.0",
         "@types/jasmine": "~3.3.8",
@@ -68,9 +67,6 @@
         "ts-node": "~7.0.0",
         "tslint": "~5.15.0",
         "typescript": "~3.5.3"
-    },
-    "engines": {
-        "node": "10.16.3",
-        "npm": "6.9.0"
     }
+
 }
