--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
     "scripts": {
         "ng": "ng",
         "build": "ng build",
-        "start": "ng serve",
+        "start": "node server.js",
         "test": "ng test",
         "lint": "ng lint",
-        "e2e": "ng e2e"
+        "e2e": "ng e2e",
+        "preinstall": "",
+        "postinstall": "ng build --aot --traget=production"
     },
     "private": true,
     "dependencies": {
@@ -16,6 +18,7 @@
         "@angular/cli": "^8.3.6",
         "@angular/common": "~8.2.0",
         "@angular/compiler": "~8.2.0",
+        "@angular/compiler-cli": "~8.2.0",
         "@angular/core": "~8.2.0",
         "@angular/flex-layout": "^8.0.0-beta.27",
         "@angular/forms": "~8.2.0",
@@ -33,6 +36,7 @@
         "angular-vertical-timeline": "^0.6.0",
         "bootstrap": "^4.3.1",
         "eva-icons": "^1.1.1",
+        "express": "^4.17.1",
         "ez-plus": "^1.2.1",
         "hammerjs": "^2.0.8",
         "jquery": "^3.4.1",
@@ -47,11 +51,11 @@
         "screenfull": "^3.3.0",
         "scss": "^0.2.4",
         "tslib": "^1.10.0",
+        "typescript": "~3.5.3",
         "zone.js": "~0.9.1"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "~0.802.2",
-        "@angular/compiler-cli": "~8.2.0",
         "@angular/language-service": "~8.2.0",
         "@schematics/angular": "^8.3.0",
         "@types/jasmine": "~3.3.8",
@@ -67,7 +71,10 @@
         "karma-jasmine-html-reporter": "^1.4.0",
         "protractor": "~5.4.0",
         "ts-node": "~7.0.0",
-        "tslint": "~5.15.0",
-        "typescript": "~3.5.3"
+        "tslint": "~5.15.0"
+    },
+    "engines": {
+        "node": "10.16.3",
+        "npm": "6.9.0"
     }
 }
